WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269344
[UnifiedPDF] Annotation hover and interaction is broken in rotated pages
https://bugs.webkit.org/show_bug.cgi?id=269344
Summary
[UnifiedPDF] Annotation hover and interaction is broken in rotated pages
Simon Fraser (smfr)
Reported
2024-02-13 21:09:12 PST
There are some coordinate conversion problems with rotated pages.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-13 21:09:25 PST
<
rdar://problem/122929753
>
Simon Fraser (smfr)
Comment 2
2024-02-13 21:13:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24396
EWS
Comment 3
2024-02-14 07:05:49 PST
Committed
274625@main
(622b90f2c44d): <
https://commits.webkit.org/274625@main
> Reviewed commits have been landed. Closing PR #24396 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug