Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -317,7 +317,7 @@ void UnifiedPDFPlugin::updatePageBackgroundLayers()
     Vector<Ref<GraphicsLayer>> pageContainerLayers = m_pageBackgroundsContainerLayer->children();
 
     for (PDFDocumentLayout::PageIndex i = 0; i < m_documentLayout.pageCount(); ++i) {
-        auto destinationRect = m_documentLayout.boundsForPageAtIndex(i);
+        auto destinationRect = m_documentLayout.layoutBoundsForPageAtIndex(i);
         destinationRect.scale(m_documentLayout.scale());
 
         auto addLayerShadow = [](GraphicsLayer& layer, IntPoint shadowOffset, const Color& shadowColor, int shadowStdDeviation) {
@@ -575,7 +575,7 @@ PDFPageCoverage UnifiedPDFPlugin::pageCoverageForRect(const FloatRect& clipRect)
         if (!page)
             continue;
 
-        auto pageBounds = m_documentLayout.boundsForPageAtIndex(i);
+        auto pageBounds = m_documentLayout.layoutBoundsForPageAtIndex(i);
         if (!pageBounds.intersects(drawingRectInPDFLayoutCoordinates))
             continue;
 
@@ -699,7 +699,7 @@ float UnifiedPDFPlugin::scaleForActualSize() const
     if (!m_documentLayout.pageCount() || documentSize().isEmpty())
         return 1;
 
-    auto firstPageBounds = m_documentLayout.boundsForPageAtIndex(0);
+    auto firstPageBounds = m_documentLayout.layoutBoundsForPageAtIndex(0);
     if (firstPageBounds.isEmpty())
         return 1;
 
@@ -873,7 +873,7 @@ unsigned UnifiedPDFPlugin::heightForPage(PDFDocumentLayout::PageIndex pageIndex)
 {
     if (isLocked() || !m_documentLayout.pageCount())
         return 0;
-    return std::ceil<unsigned>(m_documentLayout.boundsForPageAtIndex(pageIndex).height());
+    return std::ceil<unsigned>(m_documentLayout.layoutBoundsForPageAtIndex(pageIndex).height());
 }
 
 unsigned UnifiedPDFPlugin::firstPageHeight() const
@@ -1183,7 +1183,7 @@ WebCore::IntPoint UnifiedPDFPlugin::convertFromDocumentToPlugin(const WebCore::I
 std::optional<PDFDocumentLayout::PageIndex> UnifiedPDFPlugin::pageIndexForDocumentPoint(const WebCore::IntPoint& point) const
 {
     for (PDFDocumentLayout::PageIndex index = 0; index < m_documentLayout.pageCount(); ++index) {
-        auto pageBounds = m_documentLayout.boundsForPageAtIndex(index);
+        auto pageBounds = m_documentLayout.layoutBoundsForPageAtIndex(index);
         if (pageBounds.contains(point))
             return index;
     }
@@ -1202,60 +1202,16 @@ RetainPtr<PDFAnnotation> UnifiedPDFPlugin::annotationForRootViewPoint(const WebC
     return [page annotationAtPoint:convertFromDocumentToPage(pointInDocumentSpace, pageIndex.value())];
 }
 
-static AffineTransform documentSpaceToPageSpaceTransform(const IntDegrees& pageRotation, const FloatRect& pageBounds)
-{
-    return AffineTransform::makeRotation(pageRotation).translate([&pageBounds, pageRotation] () -> FloatPoint {
-        auto width = pageBounds.width();
-        auto height = pageBounds.height();
-        switch (pageRotation) {
-        case 0:
-            return { };
-        case 90:
-            return { 0, height };
-        case 180:
-            return { height, width };
-        case 270:
-            return { width, 0 };
-        default:
-            ASSERT_NOT_REACHED();
-            return { };
-        }
-    }());
-}
-
 WebCore::IntPoint UnifiedPDFPlugin::convertFromDocumentToPage(const WebCore::IntPoint& point, PDFDocumentLayout::PageIndex pageIndex) const
 {
     ASSERT(pageIndex < m_documentLayout.pageCount());
-
-    auto pageBounds = m_documentLayout.boundsForPageAtIndex(pageIndex);
-    auto pageRotation = m_documentLayout.rotationForPageAtIndex(pageIndex);
-    auto pointInPDFPageSpace = IntPoint { point - WebCore::flooredIntPoint(pageBounds.location()) };
-
-    auto pointWithTopLeftOrigin = documentSpaceToPageSpaceTransform(pageRotation, pageBounds).mapPoint(pointInPDFPageSpace);
-    return IntPoint { pointWithTopLeftOrigin.x(), static_cast<int>(pageBounds.height()) - pointWithTopLeftOrigin.y() };
+    return roundedIntPoint(m_documentLayout.documentPointToPDFPagePoint(point, pageIndex));
 }
 
 WebCore::IntPoint UnifiedPDFPlugin::convertFromPageToDocument(const WebCore::IntPoint& pageSpacePoint, PDFDocumentLayout::PageIndex pageIndex) const
 {
-    auto pageBounds = m_documentLayout.boundsForPageAtIndex(pageIndex);
-    auto pageRotation = m_documentLayout.rotationForPageAtIndex(pageIndex);
-
-    auto pageSpacePointWithFlippedYOrigin = IntPoint { pageSpacePoint.x(), static_cast<int>(pageBounds.height()) - pageSpacePoint.y() };
-    auto documentSpacePoint = WebCore::flooredIntPoint(pageBounds.location()) + pageSpacePointWithFlippedYOrigin;
-    return documentSpaceToPageSpaceTransform(pageRotation, pageBounds).inverse()->mapPoint(documentSpacePoint);
-}
-
-WebCore::FloatRect UnifiedPDFPlugin::convertFromPageToDocument(const WebCore::FloatRect& pageSpaceRect, PDFDocumentLayout::PageIndex pageIndex) const
-{
-    auto pageBounds = m_documentLayout.boundsForPageAtIndex(pageIndex);
-    auto pageRotation = m_documentLayout.rotationForPageAtIndex(pageIndex);
-
-    auto flippedYLocation = FloatPoint { pageSpaceRect.x(), pageBounds.height() - pageSpaceRect.y() };
-    auto pageSpaceRectWithFlippedYOrigin = FloatRect { flippedYLocation, pageSpaceRect.size() };
-    auto documentSpaceRect = pageSpaceRectWithFlippedYOrigin;
-    documentSpaceRect.moveBy(pageBounds.location());
-
-    return documentSpaceToPageSpaceTransform(pageRotation, pageBounds).inverse()->mapRect(documentSpaceRect);
+    ASSERT(pageIndex < m_documentLayout.pageCount());
+    return roundedIntPoint(m_documentLayout.pdfPagePointToDocumentPoint(pageSpacePoint, pageIndex));
 }
 
 WebCore::IntPoint UnifiedPDFPlugin::convertFromPageToContents(const WebCore::IntPoint& pageSpacePoint, PDFDocumentLayout::PageIndex pageIndex) const
@@ -1266,16 +1222,6 @@ WebCore::IntPoint UnifiedPDFPlugin::convertFromPageToContents(const WebCore::Int
     transformedPoint.scale(m_scaleFactor);
     return roundedIntPoint(transformedPoint);
 }
-
-WebCore::FloatRect UnifiedPDFPlugin::convertFromPageToContents(const WebCore::FloatRect& rect, PDFDocumentLayout::PageIndex pageIndex) const
-{
-    auto transformedRect = convertFromPageToDocument(rect, pageIndex);
-    transformedRect.scale(m_documentLayout.scale());
-    transformedRect.move(sidePaddingWidth(), 0);
-    transformedRect.scale(m_scaleFactor);
-    return transformedRect;
-}
-
 
 #if !LOG_DISABLED
 static TextStream& operator<<(TextStream& ts, UnifiedPDFPlugin::PDFElementType elementType)
